--- a/static/style.css
+++ b/static/style.css
@@ -552,3 +552,20 @@ img {
 
 
 
+/* ================= Pagination ===================== */
+
+.pagination {
+  white-space: nowrap;
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
+}
+
+.pagination::-webkit-scrollbar {
+  height: 6px;
+}
+
+.pagination::-webkit-scrollbar-thumb {
+  background: #aaa;
+  border-radius: 10px;
+}
+
